--- a/.env
+++ b/.env
@@ -3,3 +3,5 @@ DB_PASSWORD=MySecre3pasWWord32
 DB_NAME=TesloDB
 DB_HOST=localhost
 DB_PORT=5432
+PORT = 3000
+HOST_API = http://localhost:3000/api/v2
